fix overflow issue on edit mode; finalize save button design

--- a/frontend/src/components/ResultsView/ItemMenu/PersonCard/PersonCard.css
+++ b/frontend/src/components/ResultsView/ItemMenu/PersonCard/PersonCard.css
@@ -24,8 +24,7 @@
   justify-content: space-between;
   align-items: center;
   flex-flow: row nowrap;
-  gap: 2em;
-  white-space: nowrap;
+  gap: min(2em, 5%);
 }
 
 .personItemList,
