--- a/frontend/src/components/shared/Dialog/Dialog.css
+++ b/frontend/src/components/shared/Dialog/Dialog.css
@@ -20,6 +20,8 @@
 .dialog-container {
   z-index: 2; /* 1 */
   display: flex; /* 2 */
+  align-items: center;
+  justify-content: center;
   margin: 3em;
 }
 
